# tasty-quickcheck-laws

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  tasty-quickcheck-laws.cabal
src/Test/Tasty/QuickCheck/: Laws.hs
src/Test/Tasty/QuickCheck/Laws/: Applicative.hs  Class.hs  Eq.hs  ErrorMonad.hs  Functor.hs  IdentityMonad.hs  MaybeMonad.hs  Monad.hs  Monoid.hs  ReaderMonad.hs  Semigroup.hs  StateMonad.hs  WriterMonad.hs
test/: Main.hs
