name:           tasty-quickcheck-laws
version:        0.0.0
description:    Please see the README on GitHub at <https://github.com/nbloomf/tasty-quickcheck-laws#readme>
homepage:       https://github.com/nbloomf/tasty-quickcheck-laws#readme
bug-reports:    https://github.com/nbloomf/tasty-quickcheck-laws/issues
author:         Nathan Bloomfield
maintainer:     nathan.bloomfield@a8c.com
copyright:      2018 Automattic, Inc.
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
category:       test, tasty
synopsis:       Pre-built tasty trees of properties using QuickCheck

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/nbloomf/tasty-quickcheck-laws



library
  default-language: Haskell2010
  hs-source-dirs: src

  build-depends:
      base >=4.7 && <5
    , QuickCheck >=2.10.1 && <2.11
    , tasty >=1.0.1.1 && <1.1
    , tasty-quickcheck >=0.9.2 && <1.0

  exposed-modules:
    Test.Tasty.QuickCheck.Laws
    Test.Tasty.QuickCheck.Laws.Applicative
    Test.Tasty.QuickCheck.Laws.Class
    Test.Tasty.QuickCheck.Laws.Eq
    Test.Tasty.QuickCheck.Laws.Functor
    Test.Tasty.QuickCheck.Laws.Monad
    Test.Tasty.QuickCheck.Laws.Monoid



executable tasty-quickcheck-laws-demo
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

  build-depends:
      base >=4.7 && <5
    , tasty-quickcheck-laws



test-suite tasty-quickcheck-laws-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

  build-depends:
      base >=4.7 && <5
    , tasty-quickcheck-laws
    , tasty >=1.0.1.1 && <1.1
